--- a/register.html
+++ b/register.html
@@ -66,7 +66,7 @@
 				<div class="auth-logos">
 					<a href=""><img src="./src/images/gmail-logo.png" alt="gmail" /></a>
 				</div>
-				<p>Ya tienes una cuenta?</p>
+				<p>¿Ya tienes una cuenta?</p>
 				<!-- boton -->
 				<a class="ingresa" href="./login.html">Ingresa</a>
 			</form>
