Secciones de servicios y reseñas clientes, mobile first

--- a/mobile.html
+++ b/mobile.html
@@ -82,6 +82,151 @@
       </div>
     </section>
 
+    <!-- Sección Servicios -->
+    <section class="services-clens">
+      <h2>Nuestros Servicios</h2>
+      <div class="services-wrapper">
+        <article class="service-card">
+          <h3>Baños</h3>
+          <p>Suministramos productos Biodegradables para la implementación de Programas de Limpieza y Desinfección y  productos para el cuidado de pisos, Higiene de Manos, limpieza y Desinfección de Baños.
+            <div class="services-description">
+              <ul>
+                <li>Pisos</li>
+                <li>Espejos</li>
+                <li>Brillado en cromos</li>
+              </ul>
+              <ul>
+                <li>Lunas de duchas</li>
+                <li>Mayolicas</li>
+                <li>Desempolvar gabinetes</li>
+              </ul>
+            </div>
+          <img src="./src/images/services/bathroom.jpg" alt="baños-clens">
+        </article>
+        <article class="service-card">
+          <h3>Cocinas</h3>
+          <p>Suministramos productos Biodegradables para la implementación de Programas de Limpieza y Desinfección.</p>
+          <div class="services-description">
+            <ul>
+              <li>Pisos</li>
+              <li>Hornillas y lavaderos</li>
+              <li>Brillado en cromos</li>
+            </ul>
+            <ul>
+              <li>Lunas</li>
+              <li>Desempolvar superficies</li>
+              <li>Campana</li>
+            </ul>
+          </div>
+          <img src="./src/images/services/cocinas.jpg" alt="cocinas-clens">
+        </article>
+        <article class="service-card">
+          <h3>Salones</h3>
+          <p>Suministramos productos Biodegradables para la implementación de Programas de Limpieza y Desinfección y productos para
+          el cuidado de pisos, Higiene de Manos, limpieza y Desinfección de Baños.</p>
+          <div class="services-description">
+            <ul>
+              <li>Pisos</li>
+              <li>Espejos</li>
+              <li>Brillado en cromos</li>
+            </ul>
+            <ul>
+              <li>Limpieza muebles y tapiz</li>
+              <li>Desempolvar arañas</li>
+              <li>Desempolvar cortinas</li>
+            </ul>
+          </div>
+          <img src="./src/images/services/salas.jpg" alt="salones-clens">
+        </article>
+        <article class="service-card">
+          <h3>Habitaciones</h3>
+          <p>Suministramos productos Biodegradables para la implementación de Programas de Limpieza y Desinfección y productos para
+          el cuidado de pisos, Higiene de Manos, limpieza y Desinfección de Baños.</p>
+          <div class="services-description">
+            <ul>
+              <li>Pisos</li>
+              <li>Espejos</li>
+              <li>Brillado en cromos</li>
+            </ul>
+            <ul>
+              <li>Lunas de duchas</li>
+              <li>Mayolicas</li>
+              <li>Desempolvar gabinetes</li>
+            </ul>
+          </div>
+          <img src="./src/images/services/habitaciones.jpg" alt="habitaciones-clens">
+        </article>
+      </div>
+    </section>
+
+    <!-- Sección reviews reseñas -->
+    <section class="reviews-clens">
+      <h2>Reseñas de nuestros clientes</h2>
+      <div class="sliderDad">
+            <div class="review-wrapper" id="review1">
+              <div class="comment">
+                <h3>"Muy cordiales"</h3>
+                <p>El servicio fue muy puntual y coordial, el personal se identifico adecuadamente y terminaron a la hora pactada, próximamente volveré a contactarlos
+                </p>
+              </div>
+              <div class="client">
+                <div class="picture">
+                  <img src="https://randomuser.me/api/portraits/men/56.jpg" alt="">
+                </div>
+                <div class="name">
+                  <h4>Pedro Becerra</h4>
+                </div>
+              </div>
+            </div>
+
+            <div class="review-wrapper" id="review2">
+              <div class="comment">
+                <h3>"¡Son muy puntuales!"</h3>
+                <p>Llevo 2 meses contratando el servicio mensual de Clens y estoy encantado, agendo los días con anticipación el
+                  primer día
+                  del mes y siempre llegan puntuales</p>
+              </div>
+              <div class="client">
+                <div class="picture">
+                  <img src="https://randomuser.me/api/portraits/women/54.jpg" alt="">
+                </div>
+                <div class="name">
+                  <h4>María Manuela</h4>
+                </div>
+              </div>
+            </div>
+
+            <div class="review-wrapper" id="review3">
+              <div class="comment">
+                <h3>"Excelente servicio"</h3>
+                <p>Me gusta Clens por que su limpieza es bastante detallada y los chicos no tienen problemas en ayudarme con
+                  cualquier cosa
+                  extra</p>
+              </div>
+              <div class="client">
+                <div class="picture">
+                  <img src="https://randomuser.me/api/portraits/men/34.jpg" alt="">
+                </div>
+                <div class="name">
+                  <h4>Manuel Maldonado</h4>
+                </div>
+              </div>
+            </div>
+      </div>
+
+      <ul class="navigator-reviews">
+        <li>
+          <a href="#review1">1</a>
+        </li>
+        <li>
+          <a href="#review2">2</a>
+        </li>
+        <li>
+          <a href="#review3">3</a>
+        </li>
+      </ul>
+    </section>
+
   </main>
 
 
