added responsive to desktop screens to login and register pages

--- a/login.html
+++ b/login.html
@@ -41,11 +41,11 @@
 				<!-- inputs -->
 				<div class="form-text">
 					<h3>Correo</h3>
-					<input type="text" />
+					<input type="email" />
 				</div>
 				<div class="form-text">
 					<h3>Contraseña</h3>
-					<input type="text" placeholder="******" />
+					<input type="password" placeholder="******" />
 				</div>
 				<!-- menu -->
 				<button class="boton-ingresa">Ingresa</button>
@@ -57,8 +57,6 @@
 				<!-- menu -->
 				<a class="registrate" href="./register.html">Regístrate</a>
 			</form>
-			<div class="behind_container">
-			</div>
 		</div>
 
 		<script src="src/js/hamburguer-btn.js"></script>
