--- a/register.html
+++ b/register.html
@@ -35,8 +35,8 @@
 				</div>
 			</nav>
 		</header>
-		<!-- formulario -->
 		<div class="form-login">
+			<!-- formulario -->
 			<form action="" method="">
 				<!-- inputs -->
 				<div class="form-text">
@@ -49,16 +49,16 @@
 				</div>
 				<div class="form-text">
 					<h3>Correo</h3>
-					<input type="text" />
+					<input type="email" />
 				</div>
 				<div class="form-text">
 					<h3>Contraseña</h3>
-					<input type="text" placeholder="******" />
+					<input type="password" placeholder="******" />
 					<p>6 caracteres como mínimo</p>
 				</div>
 				<div class="form-text">
 					<h3>Confirmar Contraseña</h3>
-					<input type="text" placeholder="******" />
+					<input type="password" placeholder="******" />
 				</div>
 				<!-- boton -->
 				<button class="boton-registrate">Regístrate</button>
@@ -70,8 +70,6 @@
 				<!-- boton -->
 				<a class="ingresa" href="./login.html">Ingresa</a>
 			</form>
-			<div class="behind_container">
-			</div>
 		</div>
 
 		<script src="src/js/hamburguer-btn.js"></script>
