ajustes menu en mobile.html

--- a/mobile.html
+++ b/mobile.html
@@ -28,7 +28,7 @@
         <a href="#">Reseñas</a>
         <a href="#">Cotiza</a>
         <a href="#">Postula</a>
-        <a href="#">Registrate</a>
+        <a href="/register.html">Registrate</a>
       </div>
     </nav>
   </header>
