--- a/register.html
+++ b/register.html
@@ -24,6 +24,7 @@
 			<!-- menu -->
 			<nav>
 				<div class="menu" id="menu-id">
+					<a href="./mobile.html">Inicio</a>
 					<a href="#">¿Por qué nosotros?</a>
 					<a href="#">Servicios</a>
 					<a href="#">Personal</a>
