boton carrito de compras y foto usuario + footer

--- a/mobile.html
+++ b/mobile.html
@@ -29,11 +29,16 @@
         <a href="#">Cotiza</a>
         <a href="#">Postula</a>
         <a href="/register.html">Registrate</a>
+        <a href="/register.html">Registrate</a>
       </div>
     </nav>
   </header>
 
   <main>
+		<section class="cart-user">
+			<img class="cart" src="./src/images/icons/cart.svg" alt="carrito-compras">
+			<img class="user-picture" src="https://randomuser.me/api/portraits/women/40.jpg" alt="foto-usuario">
+		</section>
     <section class="initial">
       <img src="./src/images/first-picture.jpg" alt="">
       <div class="slogan">
@@ -229,8 +234,48 @@
 
   </main>
 
-
   <footer>
+		<section class="services">
+			<h2>Servicios</h2>
+			<ul>
+				<li><a href="#">Baño</a></li>
+				<li><a href="#">Cocina</a></li>
+				<li><a href="#">Sala</a></li>
+				<li><a href="#">Cuarto</a></li>
+				<li><a href="#">Otros</a></li>
+			</ul>
+		</section>
+		<section class="company">
+			<h2>Empresa</h2>
+
+			<ul>
+				<li><a href="#">Sobre nosotros</a></li>
+				<li><a href="#">Cotiza</a></li>
+				<li><a href="#">Postula</a></li>
+				<li><a href="#">Personal</a></li>
+			</ul>
+		</section>
+		<section class="Support">
+			<h2>Soporte</h2>
+			<ul>
+				<li><a href="#">FAQs</a></li>
+				<li><a href="#">Política de privacidad</a></li>
+				<li><a href="#">Ayuda</a></li>
+			</ul>
+		</section>
+		<section class="contact">
+			<h2>Contáctenos</h2>
+			<ul>
+				<li>contacto@clens.com</li>
+				<li>Lima / Perú</li>
+				<li>+51 123456789</li>
+			</ul>
+		</section>
+		<section class="social-networks">
+      <h2>Nuestras redes</h2>
+      <a href="#" target="_blank"><img src="./src/images/icons/facebook.png" alt="facebook"></a>
+      <a href="#" target="_blank"><img src="./src/images/icons/instagram.png" alt="instagram"></a>
+    </section>
 
   </footer>
 
