--- a/mobile.html
+++ b/mobile.html
@@ -273,7 +273,7 @@
 		</section>
 		<section class="social-networks">
       <h2>Nuestras redes</h2>
-      <a href="#" target="_blank"><img src="./src/images/icons/facebook.png" alt="facebook"></a>
+      <a href="#" ><img src="./src/images/icons/facebook.png" alt="facebook"></a>
       <a href="#" target="_blank"><img src="./src/images/icons/instagram.png" alt="instagram"></a>
     </section>
 
