Added header on top to desktop on login and register and fixed footer on mobile.html

--- a/mobile.html
+++ b/mobile.html
@@ -11,7 +11,9 @@
   <header>
     <!-- logo -->
     <div class="logo">
-      <img src="./src/images/logo-clens.jpg" alt="logo-clens">
+      <a href="./mobile.html">
+					<img src="./src/images/logo-clens.jpg" alt="logo-clens" />
+				</a>
     </div>
     <!-- Botón Hamburguesa -->
     <div class="btn-menu" id="btn-menu-id">
@@ -28,19 +30,19 @@
         <a href="#">Reseñas</a>
         <a href="#">Cotiza</a>
         <a href="#">Postula</a>
-        <a href="/register.html">Registrate</a>
-        <a href="/register.html">Registrate</a>
+        <a href="./register.html">Registrate</a>
+        <a href="./login.html">Ingresa</a>
       </div>
     </nav>
   </header>
 
   <main>
 		<section class="cart-user">
-			<img class="cart" src="./src/images/icons/cart.svg" alt="carrito-compras">
+			<div class="cart" ><img src="./src/images/icons/cart.svg" alt="carrito-compras"></div>
 			<img class="user-picture" src="https://randomuser.me/api/portraits/women/40.jpg" alt="foto-usuario">
 		</section>
     <section class="initial">
-      <img src="./src/images/first-picture.jpg" alt="">
+      <img src="./src/images/first-picture.jpg" alt="banner">
       <div class="slogan">
         <h2>El mejor Servicio<br>al mejor precio.</h2>
       </div>
@@ -235,6 +237,11 @@
   </main>
 
   <footer>
+    <section class="logo">
+      <a href="./mobile.html">
+					<img src="./src/images/logo-clens.jpg" alt="logo-clens" />
+				</a>
+    </section>
 		<section class="services">
 			<h2>Servicios</h2>
 			<ul>
