--- a/register.html
+++ b/register.html
@@ -1,78 +1,81 @@
 <!DOCTYPE html>
 <html lang="es">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Clens</title>
-		<link rel="stylesheet" href="src/styles/register-styles.css" />
-	</head>
-	<body>
-		<header>
-			<!-- logo -->
-			<div class="logo">
-				<a href="./mobile.html">
-					<img src="./src/images/logo-clens.jpg" alt="logo-clens" />
-				</a>
-			</div>
-			<!-- Botón Hamburguesa -->
-			<div class="btn-menu" id="btn-menu-id">
-				<div class="linea-1"></div>
-				<div class="linea-2"></div>
-				<div class="linea-3"></div>
-			</div>
-			<!-- menu -->
-			<nav>
-				<div class="menu" id="menu-id">
-					<a href="./mobile.html">Inicio</a>
-					<a href="#">¿Por qué nosotros?</a>
-					<a href="#">Servicios</a>
-					<a href="#">Personal</a>
-					<a href="#">Reseñas</a>
-					<a href="#">Cotiza</a>
-					<a href="#">Postula</a>
-					<a href="./register.html">Registrate</a>
-					<a href="./login.html">Ingresa</a>
-				</div>
-			</nav>
-		</header>
-		<div class="form-login">
-			<!-- formulario -->
-			<form action="" method="">
-				<!-- inputs -->
-				<div class="form-text">
-					<h3>Nombre completo</h3>
-					<input type="text" />
-				</div>
-				<div class="form-text">
-					<h3>Identificación/DNI</h3>
-					<input type="text" />
-				</div>
-				<div class="form-text">
-					<h3>Correo</h3>
-					<input type="email" />
-				</div>
-				<div class="form-text">
-					<h3>Contraseña</h3>
-					<input type="password" placeholder="******" />
-					<p>6 caracteres como mínimo</p>
-				</div>
-				<div class="form-text">
-					<h3>Confirmar Contraseña</h3>
-					<input type="password" placeholder="******" />
-				</div>
-				<!-- boton -->
-				<button class="boton-registrate">Regístrate</button>
-				<p>o Regístrate con:</p>
-				<div class="auth-logos">
-					<a href=""><img src="./src/images/gmail-logo.png" alt="gmail" /></a>
-				</div>
-				<p>¿Ya tienes una cuenta?</p>
-				<!-- boton -->
-				<a class="ingresa" href="./login.html">Ingresa</a>
-			</form>
-		</div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Clens</title>
+    <link rel="stylesheet" href="src/styles/register-styles.css" />
+  </head>
+  <body>
+    <header>
+      <!-- logo -->
+      <div class="logo">
+        <a href="./mobile.html">
+          <img src="./src/images/logo-clens.jpg" alt="logo-clens" />
+        </a>
+      </div>
+      <!-- Botón Hamburguesa -->
+      <div class="btn-menu" id="btn-menu-id">
+        <div class="linea-1"></div>
+        <div class="linea-2"></div>
+        <div class="linea-3"></div>
+      </div>
+      <!-- menu -->
+      <nav>
+        <div class="menu" id="menu-id">
+          <a href="#">¿Por qué nosotros?</a>
+          <a href="#">Servicios</a>
+          <a href="#">Personal</a>
+          <a href="#">Reseñas</a>
+          <a href="#">Cotiza</a>
+          <a href="#">Postula</a>
+          <a href="./register.html">Registrate</a>
+          <a href="./login.html">Ingresa</a>
+        </div>
+      </nav>
+    </header>
+    <div class="form-login">
+      <!-- formulario -->
+      <form action="" method="">
+        <!-- inputs -->
+        <div class="form-text">
+          <h3>Nombre completo</h3>
+          <input type="text" />
+        </div>
+        <div class="form-text">
+          <h3>Identificación/DNI</h3>
+          <input type="text" />
+        </div>
+        <div class="form-text">
+          <h3>Correo</h3>
+          <input type="email" />
+        </div>
+        <div class="form-text">
+          <h3>Contraseña</h3>
+          <input type="password" placeholder="******" />
+          <p>6 caracteres como mínimo</p>
+        </div>
+        <div class="form-text">
+          <h3>Confirmar Contraseña</h3>
+          <input type="password" placeholder="******" />
+        </div>
+        <!-- boton -->
+        <button class="boton-registrate">Regístrate</button>
+        <p>o Regístrate con:</p>
+        <div class="auth-logos">
+          <a href="#" target="_blank"
+            ><img src="./src/images/icons/facebook.png" alt="facebook" /></a>
+          <a href="#" target="_blank"
+            ><img src="./src/images/icons/instagram.png" alt="instagram" /></a>
+          <a href=""><img src="./src/images/gmail-logo.png" alt="gmail" /></a>
+        </div>
+        <p>¿Ya tienes una cuenta?</p>
+        <!-- boton -->
+        <a class="ingresa" href="./login.html">Ingresa</a>
+      </form>
+    </div>
 
-		<script src="src/js/hamburguer-btn.js"></script>
-	</body>
+    <script src="src/js/hamburguer-btn.js"></script>
+  </body>
 </html>
