added footer to login and register, and fixed servicess on desktop

--- a/login.html
+++ b/login.html
@@ -30,7 +30,6 @@
           <a href="#">Reseñas</a>
           <a href="#">Cotiza</a>
           <a href="#">Postula</a>
-          <a href="./login.html">Ingresa</a>
           <a href="./register.html">Registrate</a>
         </div>
       </nav>
@@ -64,6 +63,57 @@
         <a class="registrate" href="./register.html">Regístrate</a>
       </form>
     </div>
+
+    <footer>
+    <section class="logo">
+      <a href="./mobile.html">
+					<img src="./src/images/logo-clens.jpg" alt="logo-clens" />
+				</a>
+    </section>
+		<section class="services">
+			<h2>Servicios</h2>
+			<ul>
+				<li><a href="#">Baño</a></li>
+				<li><a href="#">Cocina</a></li>
+				<li><a href="#">Sala</a></li>
+				<li><a href="#">Cuarto</a></li>
+				<li><a href="#">Otros</a></li>
+			</ul>
+		</section>
+		<section class="company">
+			<h2>Empresa</h2>
+
+			<ul>
+				<li><a href="#">Sobre nosotros</a></li>
+				<li><a href="#">Cotiza</a></li>
+				<li><a href="#">Postula</a></li>
+				<li><a href="#">Personal</a></li>
+			</ul>
+		</section>
+		<section class="Support">
+			<h2>Soporte</h2>
+			<ul>
+				<li><a href="#">FAQs</a></li>
+				<li><a href="#">Política de privacidad</a></li>
+				<li><a href="#">Ayuda</a></li>
+			</ul>
+		</section>
+		<section class="contact">
+			<h2>Contáctenos</h2>
+			<ul>
+				<li>contacto@clens.com</li>
+				<li>Lima / Perú</li>
+				<li>+51 123456789</li>
+			</ul>
+		</section>
+		<section class="social-networks">
+      <h2>Nuestras redes</h2>
+
+      <a href="#" target="_blank"><img src="./src/images/icons/facebook.png" alt="facebook"></a>
+      <a href="#" target="_blank"><img src="./src/images/icons/instagram.png" alt="instagram"></a>
+    </section>
+
+  </footer>
 
     <script src="src/js/hamburguer-btn.js"></script>
   </body>
