added index page with no user loged and fixed ul width on services

--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@
     </header>
     <!-- formulario -->
     <div class="form-login">
-      <form action="" method="">
+      <form action="./mobile.html" method="">
         <!-- inputs -->
         <div class="form-text">
           <h3>Correo</h3>
@@ -50,10 +50,10 @@
         <button class="boton-ingresa">Ingresa</button>
         <p>o Ingresa con:</p>
         <div class="auth-logos">
-          <a href="#" target="_blank"
+          <a href="" target=""
             ><img src="./src/images/icons/facebook.png" alt="facebook"
           /></a>
-          <a href="#" target="_blank"
+          <a href="" target=""
             ><img src="./src/images/icons/instagram.png" alt="instagram"
           /></a>
           <a href=""><img src="./src/images/gmail-logo.png" alt="gmail" /></a>
