--- a/register.html
+++ b/register.html
@@ -36,7 +36,7 @@
     </header>
     <div class="form-login">
       <!-- formulario -->
-      <form action="" method="">
+      <form action="./mobile.html" method="">
         <!-- inputs -->
         <div class="form-text">
           <h3>Nombre completo</h3>
@@ -63,9 +63,9 @@
         <button class="boton-registrate">Regístrate</button>
         <p>o Regístrate con:</p>
         <div class="auth-logos">
-          <a href="#" target="_blank"
+          <a href="" target=""
             ><img src="./src/images/icons/facebook.png" alt="facebook" /></a>
-          <a href="#" target="_blank"
+          <a href="" target=""
             ><img src="./src/images/icons/instagram.png" alt="instagram" /></a>
           <a href=""><img src="./src/images/gmail-logo.png" alt="gmail" /></a>
         </div>
@@ -74,7 +74,7 @@
         <a class="ingresa" href="./login.html">Ingresa</a>
       </form>
     </div>
-    
+
     <footer>
     <section class="logo">
       <a href="./mobile.html">
