--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
     <header>
       <!-- logo -->
       <div class="logo">
-        <a href="./mobile.html">
+        <a href="./index.html">
           <img src="./src/images/logo-clens.jpg" alt="logo-clens" />
         </a>
       </div>
@@ -66,7 +66,7 @@
 
     <footer>
     <section class="logo">
-      <a href="./mobile.html">
+      <a href="./index.html">
 					<img src="./src/images/logo-clens.jpg" alt="logo-clens" />
 				</a>
     </section>
