fixed reviews buttons

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <h3>"Excelente servicio"</h3>
                 <p>Me gusta Clens por que su limpieza es bastante detallada y los chicos no tienen problemas en ayudarme con
                   cualquier cosa
-                  extra</p>
+                  extra que les pida acorde al servicio contratado</p>
               </div>
               <div class="client">
                 <div class="picture">
