--- a/mobile.html
+++ b/mobile.html
@@ -39,7 +39,9 @@
   <main>
 		<section class="cart-user">
 			<div class="cart" ><img src="./src/images/icons/cart.svg" alt="carrito-compras"></div>
+      <a href="./info-cuenta.html">
 			<img class="user-picture" src="https://randomuser.me/api/portraits/women/40.jpg" alt="foto-usuario">
+      </a>
 		</section>
     <section class="initial">
       <img src="./src/images/first-picture.jpg" alt="banner">
@@ -207,8 +209,8 @@
               <div class="comment">
                 <h3>"Excelente servicio"</h3>
                 <p>Me gusta Clens por que su limpieza es bastante detallada y los chicos no tienen problemas en ayudarme con
-                  cualquier cosa
-                  extra</p>
+                  cualquier cosa extra que les pida acorde al servicio contratado
+                  </p>
               </div>
               <div class="client">
                 <div class="picture">
