agregado menú usuario

--- a/info-cuenta.html
+++ b/info-cuenta.html
@@ -43,14 +43,21 @@
         <a href="./login.html">Ingresa</a>
       </div>
     </nav>
+    <!-- MEnu-perfil -->
+    <section class="menu-perfil" id="menu-perfil">
+      <a href="/info-cuenta.html">Mi Perfil</a>
+      <a href="#">Mis servicios</a>
+      <a href="#">Mi historial</a>
+      <a href="#">Mi carrito</a>
+      <a href="#">Cerrar sesion</a>
+    </section>
+    <section class="cart-user">
+      <div class="cart"><img src="./src/images/icons/cart.svg" alt="carrito-compras"></div>
+      <img class="user-picture" src="https://randomuser.me/api/portraits/women/40.jpg" alt="foto-usuario" id="perfil">
+    </section>
   </header>
   <main>
-		<section class="cart-user">
-			<div class="cart" ><img src="./src/images/icons/cart.svg" alt="carrito-compras"></div>
-      <a href="./info-cuenta.html">
-			<img class="user-picture" src="https://randomuser.me/api/portraits/women/40.jpg" alt="foto-usuario">
-      </a>
-		</section>
+
   </main>
     <div class="card--desktop">
       <div class="card">
