--- a/mobile.html
+++ b/mobile.html
@@ -34,14 +34,22 @@
         <a href="./login.html">Ingresa</a>
       </div>
     </nav>
+
+    <section class="menu-perfil" id="menu-perfil">
+      <a href="/info-cuenta.html">Mi Perfil</a>
+      <a href="#">Mis servicios</a>
+      <a href="#">Mi historial</a>
+      <a href="#">Mi carrito</a>
+      <a href="#">Cerrar sesion</a>
+    </section>
   </header>
 
   <main>
 		<section class="cart-user">
 			<div class="cart" ><img src="./src/images/icons/cart.svg" alt="carrito-compras"></div>
-      <a href="./info-cuenta.html">
-			<img class="user-picture" src="https://randomuser.me/api/portraits/women/40.jpg" alt="foto-usuario">
-      </a>
+
+			<img class="user-picture" src="https://randomuser.me/api/portraits/women/40.jpg" alt="foto-usuario" id="perfil">
+
 		</section>
     <section class="initial">
       <img src="./src/images/first-picture.jpg" alt="banner">
