ajustado menu usuario en info usuario

--- a/info-cuenta.html
+++ b/info-cuenta.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
     />
-    <title>Document</title>
+    <title>Clens - Info cuenta</title>
   </head>
   <body>
     <header>
