added link to perfil slider and updated link on readme

--- a/info-cuenta.html
+++ b/info-cuenta.html
@@ -45,11 +45,11 @@
     </nav>
     <!-- MEnu-perfil -->
     <section class="menu-perfil" id="menu-perfil">
-      <a href="/info-cuenta.html">Mi Perfil</a>
+      <a href="./info-cuenta.html">Mi Perfil</a>
       <a href="#">Mis servicios</a>
       <a href="#">Mi historial</a>
       <a href="#">Mi carrito</a>
-      <a href="#">Cerrar sesion</a>
+      <a href="./index.html">Cerrar sesion</a>
     </section>
     <section class="cart-user">
       <div class="cart"><img src="./src/images/icons/cart.svg" alt="carrito-compras"></div>
