--- a/mobile.html
+++ b/mobile.html
@@ -36,11 +36,11 @@
     </nav>
 
     <section class="menu-perfil" id="menu-perfil">
-      <a href="/info-cuenta.html">Mi Perfil</a>
+      <a href="./info-cuenta.html">Mi Perfil</a>
       <a href="#">Mis servicios</a>
       <a href="#">Mi historial</a>
       <a href="#">Mi carrito</a>
-      <a href="#">Cerrar sesion</a>
+      <a href="./index.html">Cerrar sesion</a>
     </section>
   </header>
 
