--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Clens, el mejor servicio de limpieza del hogar, al mejor precio"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo-clens.jpg" />
     <!--
