public data update

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,24 @@
       name="description"
       content="Clens, el mejor servicio de limpieza del hogar, al mejor precio"
     />
+    <!-- Facebook Open Graph data -->
+    <meta property="og:title" content="Clens">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://clens.netlify.app/">
+    <meta property="og:image" content="https://clens.netlify.app/clens_logo_fb.png">
+    <meta property="og:description" content="Clens, el mejor servicio de limpieza del hogar, al mejor precio">
+    <meta property="og:site_name" content="Clens">
+
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@Clens">
+    <meta name="twitter:title" content="Clens">
+    <meta name="twitter:description" content="Clens - Connecting for your health">
+    <meta name="twitter:creator" content="@Clens">
+    <meta name="twitter:image:src" content="https://clens.netlify.app/clens_logo_fb.png">
+    <meta name="csrf-param" content="authenticity_token">
+    <meta name="csrf-token" content="cbWM2Dq0RTyJ5lQ_5V0gBEkm8T1vBKGriZ_zbspc1iLLCvIGwDl484vdJEvfvZ0oT8ZtufKMQYg87d0QShi-GQ">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo-clens.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
